# thangamayil

./: .gitignore  CLAUDE.md  GUI_SETUP.md  LICENSE.txt  PROJECT_SUMMARY.md  README.md  README_INSTALLATION.md  billprint.md  build_exe.py  build_installer.iss  console_app.py  db.sql  main.py  pyproject.toml  run_console.py  run_gui_safe.py  run_simple.py  setup_gui.py  test_core.py  test_gui_simple.py  thangamayil.db  workflow-schema.md
src/thangamayil/: __init__.py
src/thangamayil/database/: __init__.py  connection.py
src/thangamayil/models/: __init__.py  auth.py  billing.py  items.py
src/thangamayil/ui/: __init__.py  barcode_printer.py  bill_details.py  bill_edit.py  bill_management.py  item_edit.py  items_management.py  login.py  main_window.py  pos_billing.py  reports.py  staff_management.py  thermal_printer.py
