[project]
name = "thangamayil-billing"
version = "1.0.0"
description = "தங்கமயில் சில்க்ஸ் - Offline Billing Software for Silk Shops"
authors = [
    {name = "Thangamayil Silks", email = "info@thangamayilsilks.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "reportlab>=4.0.0",
    "bcrypt>=4.0.0",
    "pillow>=10.0.0",
    "python-barcode>=0.14.0",
    "openpyxl>=3.1.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/thangamayil"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]